--- a/style.css
+++ b/style.css
@@ -633,6 +633,27 @@ main{
 
 }
 
+@media (max-width: 768px) {
+
+  .home {
+    display: none;
+  }
+
+  .search-engine {
+    width: 70%;
+  }
+
+  .search-bar {
+    padding: 8px;
+  }
+
+  .search-bar input {
+    font-size: 13px;
+  }
+
+}
+
+
 @media (max-width: 700px){
     .details{
         display: none;
