--- a/style.css
+++ b/style.css
@@ -675,12 +675,12 @@ main{
         margin-right: 10px;
         display: block; 
     }
-    .home-search{
-        order: 3; 
-        width: 100%; 
-        justify-content: center; 
-        left: 0; 
-        margin-top: 10px; 
+    .home-search {
+        order: 3;
+        width: 88%;
+        justify-content: center;
+        left: 40px;
+        margin-top: -35px;
     }
     .search-engine{
         width: 90%; 
