--- a/style.css
+++ b/style.css
@@ -51,9 +51,7 @@ body{
     right: 10px;
     top: 7px;
     width: 29px;
-    display: none; 
-}
-.home-search{
+}.home-search{
     position: relative;
     left: 27px;
 }
@@ -528,10 +526,7 @@ main{
     .songTime {
         width: auto;
     }
-    .songTime{
-        position: absolute;
-        top: 10px;
-    }
+
     .timevol {
         display: flex;
         justify-content: space-evenly;
@@ -545,8 +540,7 @@ main{
         justify-content: space-evenly;
         align-items: center; 
         width: 98%; 
-        padding: 25px;
-        height: 50px;
+        padding: 10px; 
     }
     .playBar{
         display: flex;
@@ -576,10 +570,7 @@ main{
         margin-left: -5px;
         margin-top: -3px;
     }
-    .songInfo{
-        position: relative;
-        margin-top: -10px;
-    }
+
     .seekBar {
         width: calc(100vw - 10px);
        position: absolute;
@@ -594,13 +585,10 @@ main{
         margin: 0;
     }
 
-    /* .card {
-        
-    } */
-
     .cardContainer {
         margin: 0;
-        
+        padding: 20px 10px; 
+        margin-bottom: 130px; 
     }
 
     .close {
@@ -609,11 +597,7 @@ main{
 
   
 
-    .cardContainer {
-        max-height: unset;
-        overflow-y: unset;
-        margin-bottom: 35vh;
-    }
+
 
     .playbar{
         right: 25px;
@@ -690,5 +674,12 @@ main{
     }
     
 }
+
+@media (max-width: 500px) {
+    .cardContainer {
+        grid-template-columns: repeat(auto-fit, minmax(120px, 1fr)); 
+    }
+}
+
 
 
